Fix word wrap

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -22,6 +22,7 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
   font-size: 3rem;
+  word-wrap: break-word;
 }
 
 h2 {
